test/pass/inheritance/inherit_generics.lly
class First[A](v1: A) {  }
class Second[A, B](v1: A, v2: B) < First(v1) {  }
