test/fail/classes/invalid_static_access.lly
#[
SyntaxError: Expected '::', not ).
    from invalid_static_access.lly:8
]#

class test {}

show(test) new
